--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="github.aqt.alwayssuggest"
-          android:versionCode="1"
-          android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="22"/>
+          package="github.aqt.alwayssuggest">
 	<application android:label="AlwaysSuggest">
 		<meta-data
 			android:name="xposedmodule"
